--- a/php_fpm_82/www.conf
+++ b/php_fpm_82/www.conf
@@ -1,3 +1,5 @@
+; Start a new pool named 'www'.
+; the variable $pool can be used in any directive and will be replaced by the
 ; pool name ('www' here)
 [www]
 
@@ -38,8 +40,6 @@ group = www-data
 ; Note: This value is mandatory.
 listen = 127.0.0.1:9000
 
-;open_basedir = "/var/www/vhosts"
-
 ; Set listen(2) backlog.
 ; Default Value: 511 (-1 on Linux, FreeBSD and OpenBSD)
 ;listen.backlog = 511
@@ -50,8 +50,8 @@ listen = 127.0.0.1:9000
 ; and group can be specified either by name or by their numeric IDs.
 ; Default Values: Owner is set to the master process running user. If the group
 ;                 is not set, the owner's group is used. Mode is set to 0660.
-listen.owner = www-data
-listen.group = www-data
+;listen.owner = www-data
+;listen.group = www-data
 ;listen.mode = 0660
 
 ; When POSIX Access Control Lists are supported you can set them using
@@ -113,8 +113,7 @@ listen.group = www-data
 ;             pm.process_idle_timeout   - The number of seconds after which
 ;                                         an idle process will be killed.
 ; Note: This value is mandatory.
-pm = ondemand
-user = www-data
+pm = dynamic
 
 ; The number of child processes to be created when pm is set to 'static' and the
 ; maximum number of child processes when pm is set to 'dynamic' or 'ondemand'.
@@ -125,7 +124,7 @@ user = www-data
 ; forget to tweak pm.* to fit your needs.
 ; Note: Used when pm is set to 'static', 'dynamic' or 'ondemand'
 ; Note: This value is mandatory.
-pm.max_children = 30
+pm.max_children = 5
 
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
@@ -157,7 +156,7 @@ pm.max_spare_servers = 3
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-pm.max_requests = 4096
+;pm.max_requests = 500
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page. It shows the following information:
@@ -423,7 +422,7 @@ pm.max_requests = 4096
 ; Chdir to this directory at the start.
 ; Note: relative path can be used.
 ; Default Value: current directory or / when chroot
-chdir = /
+;chdir = /var/www
 
 ; Redirect worker stdout and stderr into main error log. If not set, stdout and
 ; stderr will be redirected to /dev/null according to FastCGI specs.
@@ -485,13 +484,7 @@ chdir = /
 ; Default Value: nothing is defined by default except the values in php.ini and
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
-catch_workers_output = yes
-php_flag[display_errors] = off
-php_admin_value[error_log] = /var/log/php-8.2-fpm.log
-php_admin_flag[log_errors] = on
-php_admin_value[memory_limit] = 512M
-php_admin_value[max_execution_time] = 1800
-php_admin_value[max_input_nesting_level] = 128M
-php_admin_value[max_input_vars] = 6000
-php_admin_value[post_max_size] = 36M
-php_admin_value[upload_max_filesize] = 32M
+;php_flag[display_errors] = off
+;php_admin_value[error_log] = /var/log/fpm-php.www.log
+;php_admin_flag[log_errors] = on
+;php_admin_value[memory_limit] = 32M
