--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     deploy:
       mode: replicated
       replicas: 3
+      endpoint_mode: dnsrr
       placement:
         constraints:
           - node.role == worker
@@ -39,6 +40,7 @@ services:
     deploy:
       mode: replicated
       replicas: 3
+      endpoint_mode: dnsrr
       placement:
         constraints:
           - node.role == worker
@@ -50,6 +52,7 @@ services:
     deploy:
       mode: replicated
       replicas: 3
+      endpoint_mode: dnsrr
       placement:
         constraints:
           - node.role == worker
